--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,20 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.3</version>
     </dependency>
+    
+    <!-- ZXing QR Code Generator -->
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+      <version>3.5.2</version>
+    </dependency>
+    
+    <!-- ZXing Java SE Support -->
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>3.5.2</version>
+    </dependency>
   </dependencies>
 
   <build>
