PDF generation works,I hope so

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
       <artifactId>javase</artifactId>
       <version>3.5.2</version>
     </dependency>
+    
+    <!-- iText PDF Library -->
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itext7-core</artifactId>
+      <version>7.2.5</version>
+      <type>pom</type>
+    </dependency>
   </dependencies>
 
   <build>
